tests/diagnostics/uninitialized-resource-type.slang.expected
result code = -1
standard error = {
error[E30504]: cannot use initializer list for type 'Texture2D<vector<float,4>>'
   ╭╼ tests/diagnostics/uninitialized-resource-type.slang:10:29
   │
10 │ Texture2D<float4> bar = {};
   │                         ━ cannot use initializer list for type 'Texture2D<vector<float,4>>'
}
standard output = {
}
